test/org/midica/testfiles/failing/oto-before-block.midica
INCLUDE inc/instruments.midica

1: c (q=2)
{
	1: c
	{
		1: d e
	}
	1: f
}
1: g
